syntax="proto3";

option go_package = "./pkg/pb/product";

service ProductService {
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
}

message GetProductRequest {
  string ProductId = 1;
}

message GetProductResponse {
  string Id = 1;
  string Name = 2;
  float MinPrice = 3;
  string Description = 4;
  int32 Quantity = 5;
  uint32 AdminId = 6;
}
//    Id          string  `json:"id" gorm:"primary_key;type:varchar(20);not null;unique"`
//    Name        string  `json:"name" gorm:"type:nvarchar(100);not null"`
//    MinPrice    float64 `json:"min_price" gorm:"type:double);not null"`
//    Description string  `json:"description" gorm:"type:nvarchar(500);not null"`
//    Quantity    int     `json:"quantity" gorm:"type:nvarchar(500);not null"`
//    AdminId     uint    `json:"admin_id"`

